methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:7: error: type mismatch;
 found   : Unit
 required: Boolean
  recule(6)
        ^