methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var rep = false
  for(n<- 1 to 6) {
    avance()
    if(estSurBiscuit()) rep = true
  }
  recule(6)
}